change java version add controller